--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@rails/webpacker": "5.2.1",
     "bootstrap": "4.3.1",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12"
   },
   "version": "0.1.0",
   "devDependencies": {
